# Climate-Based-Disease-Forecasting

./: README.md
Weather-Driven Health Risk Prediction/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  blog.md  blog2.md  blog3.md  dvc.yaml  notes.md  params.yaml  prefect.yaml  pyproject.toml  requirements.txt  sample_input.json  sample_input_transformed.json
Weather-Driven Health Risk Prediction/data/interim/: weather_disease.parquet
Weather-Driven Health Risk Prediction/data/processed/: reference.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
Weather-Driven Health Risk Prediction/infra/: .gitignore  ec2.tf  infra.md  main.tf  outputs.tf  rds.tf  s3.tf  variables.tf  vpc.tf
Weather-Driven Health Risk Prediction/k8s/: deployment.yaml  hpa.yaml  service.yaml
Weather-Driven Health Risk Prediction/lambda_src/: Dockerfile  README.md  lambda_function.py  requirements.txt
Weather-Driven Health Risk Prediction/lambda_src/app/: lambda_function.py  (+1 more)
Weather-Driven Health Risk Prediction/monitoring/: README.md  basewd.ipynb
Weather-Driven Health Risk Prediction/reports/: classification_report.csv  evaluation_metrics.csv  model_metrics.csv  predictions.csv
Weather-Driven Health Risk Prediction/service/: Dockerfile  api_requirements.txt  app.py  pyproject.toml  weather_disease_model.pkl
Weather-Driven Health Risk Prediction/src/: __init__.py  clean_data.py  create_input_sample.py  data_split.py  evaluate.py  evidently_metrics.py  fetch_best_model.py  pipeline.py  serve.py  serve_local.py  train.py  transform.py  visualise.py
(+38 files in other folders)
